[project]
name = "windpower-forecasting"
version = "0.1.0"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "metpy>=1.7.1",
    "neuralforecast>=3.1.6",
    "chronos-forecasting>=2.0",
    "uni2ts",
    "jaxtyping",
    "hydra",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ty.src]
exclude = [
    "/data/**",
    "**/etc/",
    "**/res/"
]

[tool.ty.environment]
python = ".venv/bin/python"
